<resources>
    <string name="app_name">CanopyDeployDemoApp</string>
    <string name="default_fcm_channel_id">channel-01</string>
    <string name="ticket">ticket</string>
    <string name="main_text">Choose wisely the needed button</string>
    <string name="register">Register</string>
    <string name="add_to_basket">Add to basket</string>
    <string name="product_picture">product picture</string>
    <string name="go_to_product_overview">Go to product overview</string>
    <string name="password_hint">Enter password</string>
    <string name="login">Login</string>
    <string name="poll">Take a poll</string>
    <string name="property">Set property</string>
    <string name="thank_you">You\'re all done, have a 🍪</string>
    <string name="done">Done</string>
    <string name="email_hint">Enter email</string>
    <string name="submit">Submit</string>
    <string name="saved_id_key">saved_id_key</string>
    <string name="notification_channel_name">test 1</string>
    <string name="notification_channel_description">test 2</string>
</resources>
