<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/cp_Layout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="top"
        android:layout_weight="1"
        android:gravity="center|top"
        android:orientation="vertical"
        android:tag="cp_Layout">

    <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/main_text"
            android:textSize="20sp"
            android:id="@+id/mainText"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/register" />

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/login" />
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_poll"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/poll" />

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_property"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/property" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_callticket"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/ticket" />

</LinearLayout>

</LinearLayout>