<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="nl.evillage.MainActivity"
        android:gravity="center"
        android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/main_text"
            android:textSize="20sp"
            android:id="@+id/mainText"/>

    <Button
            android:id="@+id/register"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            tools:layout_editor_absoluteY="390dp"
            tools:layout_editor_absoluteX="161dp"/>

    <Button
            android:id="@+id/login"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            tools:layout_editor_absoluteY="390dp"
            tools:layout_editor_absoluteX="161dp"/>
    <Button
            android:id="@+id/poll"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/poll"
            tools:layout_editor_absoluteY="390dp"
            tools:layout_editor_absoluteX="161dp"/>

    <Button
            android:id="@+id/property"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/property"
            tools:layout_editor_absoluteY="390dp"
            tools:layout_editor_absoluteX="161dp"/>

</LinearLayout>