<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="nl.evillage.LoginActivity">

    <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"/>
    <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"/>

    <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"/>


</LinearLayout>