<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"/>
    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="300dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"/>

</LinearLayout>